// Code generated by codegen. DO NOT EDIT.
syntax = "proto3";
package dmltestgeneratedpb;
import "google/protobuf/timestamp.proto";
import "github.com/corestoreio/pkg/storage/null/null.proto";
option go_package =  "./dmltestgeneratedpb";
// CatalogProductIndexEAVDecimalIDX represents a single row for
// catalog_product_index_eav_decimal_idx DB table. Auto generated.
// Table comment: Catalog Product EAV Decimal Indexer Index Table
message CatalogProductIndexEAVDecimalIDX {
	uint32 EntityID = 1 ; // Entity ID
	uint32 AttributeID = 2 ; // Attribute ID
	uint32 StoreID = 3 ; // Store ID
	uint32 SourceID = 4 ; // Original entity Id for attribute value
	null.Decimal Value = 5 ; // Value
}
// CatalogProductIndexEAVDecimalIDXes represents multiple rows for the
// catalog_product_index_eav_decimal_idx DB table. Auto generated.
message CatalogProductIndexEAVDecimalIDXes {
	repeated CatalogProductIndexEAVDecimalIDX Data = 1;
}
// CoreConfiguration represents a single row for core_configuration DB table.
// Auto generated.
// Table comment: Config Data
message CoreConfiguration {
	uint32 ConfigID = 1 ; // Id
	string Scope = 2 ; // Scope
	int32 ScopeID = 3 ; // Scope Id
	 google.protobuf.Timestamp Expires = 4 ; // Value expiration time
	string Path = 5 ; // Config Path overwritten
	 string Value = 6 ; // Value
	google.protobuf.Timestamp VersionTs = 7 ; // Timestamp Start Versioning
	google.protobuf.Timestamp VersionTe = 8 ; // Timestamp End Versioning
}
// CoreConfigurations represents multiple rows for the core_configuration DB
// table. Auto generated.
message CoreConfigurations {
	repeated CoreConfiguration Data = 1;
}
// CustomerAddressEntity represents a single row for customer_address_entity DB
// table. Auto generated.
// Table comment: Customer Address Entity
message CustomerAddressEntity {
	uint32 EntityID = 1 ; // Entity ID
	 string IncrementID = 2 ; // Increment Id
	 uint32 ParentID = 3 ; // Parent ID
	google.protobuf.Timestamp CreatedAt = 4 ; // Created At
	google.protobuf.Timestamp UpdatedAt = 5 ; // Updated At
	bool IsActive = 6 ; // Is Active
	string City = 7 ; // City
	 string Company = 8 ; // Company
	string CountryID = 9 ; // Country
	string Firstname = 10 ; // First Name
	string Lastname = 11 ; // Last Name
	 string Postcode = 12 ; // Zip/Postal Code
	 string Region = 13 ; // State/Province
	string Street = 14 ; // Street Address
}
// CustomerAddressEntities represents multiple rows for the
// customer_address_entity DB table. Auto generated.
message CustomerAddressEntities {
	repeated CustomerAddressEntity Data = 1;
}
// CustomerEntity represents a single row for customer_entity DB table. Auto
// generated.
// Table comment: Customer Entity
message CustomerEntity {
	uint32 EntityID = 1 ; // Entity ID
	 uint32 WebsiteID = 2 ; // Website ID
	 string Email = 3 ; // Email
	uint32 GroupID = 4 ; // Group ID
	 uint32 StoreID = 5 ; // Store ID
	google.protobuf.Timestamp CreatedAt = 6 ; // Created At
	google.protobuf.Timestamp UpdatedAt = 7 ; // Updated At
	bool IsActive = 8 ; // Is Active
	 string CreatedIn = 9 ; // Created From
	 string Firstname = 10 ; // First Name
	 string Lastname = 11 ; // Last Name
	 google.protobuf.Timestamp Dob = 12 ; // Date of Birth
	 string RpToken = 14 ; // Reset password token
	 google.protobuf.Timestamp RpTokenCreatedAt = 15 ; // Reset password token creation time
	 uint32 DefaultBilling = 16 ; // Default Billing Address
	 uint32 DefaultShipping = 17 ; // Default Shipping Address
	 uint32 Gender = 18 ; // Gender
	CustomerAddressEntities CustomerAddressEntities = 19 ; // Reversed 1:M customer_entity.entity_id => customer_address_entity.parent_id
}
// CustomerEntities represents multiple rows for the customer_entity DB table.
// Auto generated.
message CustomerEntities {
	repeated CustomerEntity Data = 1;
}
// DmlgenTypes represents a single row for dmlgen_types DB table. Auto generated.
message DmlgenTypes {
	int32 ID = 1 ; //
	 int64 ColBigint1 = 2 ; //
	int64 ColBigint2 = 3 ; //
	 uint64 ColBigint3 = 4 ; //
	uint64 ColBigint4 = 5 ; //
	bytes ColBlob = 6 ; //
	 google.protobuf.Timestamp ColDate1 = 7 ; //
	google.protobuf.Timestamp ColDate2 = 8 ; //
	 google.protobuf.Timestamp ColDatetime1 = 9 ; //
	google.protobuf.Timestamp ColDatetime2 = 10 ; //
	null.Decimal ColDecimal101 = 11 ; //
	null.Decimal ColDecimal124 = 12 ; //
	null.Decimal PriceA124 = 13 ; //
	null.Decimal PriceB124 = 14 ; //
	null.Decimal ColDecimal123 = 15 ; //
	null.Decimal ColDecimal206 = 16 ; //
	null.Decimal ColDecimal2412 = 17 ; //
	 int32 ColInt1 = 18 ; //
	int32 ColInt2 = 19 ; //
	 uint32 ColInt3 = 20 ; //
	uint32 ColInt4 = 21 ; //
	 string ColLongtext1 = 22 ; //
	string ColLongtext2 = 23 ; //
	bytes ColMediumblob = 24 ; //
	 string ColMediumtext1 = 25 ; //
	string ColMediumtext2 = 26 ; //
	 int32 ColSmallint1 = 27 ; //
	int32 ColSmallint2 = 28 ; //
	 uint32 ColSmallint3 = 29 ; //
	uint32 ColSmallint4 = 30 ; //
	bool HasSmallint5 = 31 ; //
	 bool IsSmallint5 = 32 ; //
	 string ColText = 33 ; //
	google.protobuf.Timestamp ColTimestamp1 = 34 ; //
	 google.protobuf.Timestamp ColTimestamp2 = 35 ; //
	int32 ColTinyint1 = 36 ; //
	string ColVarchar1 = 37 ; //
	 string ColVarchar100 = 38 ; //
	string ColVarchar16 = 39 ; //
	 string ColChar1 = 40 ; //
	string ColChar2 = 41 ; //
}
// DmlgenTypesCollection represents multiple rows for the dmlgen_types DB table.
// Auto generated.
message DmlgenTypesCollection {
	repeated DmlgenTypes Data = 1;
}
// SalesOrderStatusState represents a single row for sales_order_status_state DB
// table. Auto generated.
// Table comment: Sales Order Status Table
message SalesOrderStatusState {
	string Status = 1 ; // Status
	string State = 2 ; // Label
	bool IsDefault = 3 ; // Is Default
	uint32 VisibleOnFront = 4 ; // Visible on front
}
// SalesOrderStatusStates represents multiple rows for the
// sales_order_status_state DB table. Auto generated.
message SalesOrderStatusStates {
	repeated SalesOrderStatusState Data = 1;
}
// ViewCustomerAutoIncrement represents a single row for
// view_customer_auto_increment DB table. Auto generated.
// Table comment: VIEW
message ViewCustomerAutoIncrement {
	uint32 CeEntityID = 1 ; // Entity ID
	 string Email = 2 ; // Email
	string Firstname = 3 ; // First Name
	string Lastname = 4 ; // Last Name
	string City = 5 ; // City
}
// ViewCustomerAutoIncrements represents multiple rows for the
// view_customer_auto_increment DB table. Auto generated.
message ViewCustomerAutoIncrements {
	repeated ViewCustomerAutoIncrement Data = 1;
}
// ViewCustomerNoAutoIncrement represents a single row for
// view_customer_no_auto_increment DB table. Auto generated.
// Table comment: VIEW
message ViewCustomerNoAutoIncrement {
	 string Email = 1 ; // Email
	string Firstname = 2 ; // First Name
	string Lastname = 3 ; // Last Name
	string City = 4 ; // City
}
// ViewCustomerNoAutoIncrements represents multiple rows for the
// view_customer_no_auto_increment DB table. Auto generated.
message ViewCustomerNoAutoIncrements {
	repeated ViewCustomerNoAutoIncrement Data = 1;
}
